bindings/php/revault_ffi.h

typedef unsigned char bool;
typedef unsigned char uint8_t;
typedef unsigned int uint32_t;
typedef unsigned long uint64_t;
typedef unsigned long size_t;
typedef struct { uint8_t *ptr; size_t len; } RevaultBuffer;
bool lockbox_is_dir(const void *handle, const char *path, size_t path_len);
uint32_t lockbox_permissions(const void *handle, const char *path, size_t path_len);
bool lockbox_set_permissions(void *handle, const char *path, size_t path_len, uint32_t permissions);
RevaultBuffer lockbox_read_range(const void *handle, const char *path, size_t path_len, uint64_t offset, uint64_t len);
RevaultBuffer lockbox_recovery_scan(const uint8_t *bytes, size_t len, const uint8_t *key, size_t key_len);
void *lockbox_recovery_salvage(const uint8_t *bytes, size_t len, const uint8_t *key, size_t key_len, const void *signing_key);
uint64_t lockbox_add_password(void *handle, const uint8_t *password, size_t len);
uint64_t lockbox_add_contact(void *handle, const void *contact, const char *name, size_t name_len);
bool lockbox_delete_key(void *handle, uint64_t id);
RevaultBuffer lockbox_list_key_slots(const void *handle);
bool lockbox_set_owner_signing_key(void *handle, const void *key);
RevaultBuffer lockbox_owner_inspection(const void *handle);
RevaultBuffer lockbox_define_form(void *handle, const char *alias, size_t alias_len, const char *name, size_t name_len, const char *description, size_t description_len, const uint8_t *fields_flatbuffer, size_t fields_len);
RevaultBuffer lockbox_list_form_definitions(const void *handle);
RevaultBuffer lockbox_resolve_form(const void *handle, const char *reference, size_t reference_len);
RevaultBuffer lockbox_list_form_revisions(const void *handle, const char *type_id, size_t type_id_len);
RevaultBuffer lockbox_create_form_record(void *handle, const char *path, size_t path_len, const char *type_reference, size_t type_len, const char *name, size_t name_len);
bool lockbox_set_form_field(void *handle, const char *path, size_t path_len, const char *field, size_t field_len, const char *value, size_t value_len);
bool lockbox_set_secret_form_field(void *handle, const char *path, size_t path_len, const char *field, size_t field_len, const uint8_t *value, size_t value_len);
RevaultBuffer lockbox_list_form_records(const void *handle);
RevaultBuffer lockbox_get_form_record(const void *handle, const char *path, size_t path_len);
bool lockbox_delete_form_record(void *handle, const char *path, size_t path_len);
bool lockbox_move_form_records(void *handle, const uint8_t *moves_flatbuffer, size_t moves_len);
RevaultBuffer lockbox_get_form_field(const void *handle, const char *path, size_t path_len, const char *field, size_t field_len);
bool lockbox_get_secret_form_field(const void *handle, const char *path, size_t path_len, const char *field, size_t field_len, void **output);
RevaultBuffer lockbox_to_bytes(const void *handle);
void lockbox_free(void *handle);
bool vault_is_running(void);
bool vault_forget_all(void);
void *key_contact_generate(void);
void *key_contact_from_private(const uint8_t *bytes, size_t len);
RevaultBuffer key_contact_public(const void *handle);
RevaultBuffer key_contact_private(const void *handle);
void *key_contact_public_from_bytes(const uint8_t *bytes, size_t len);
void key_contact_public_free(void *handle);
void key_contact_free(void *handle);
void *key_contact_encrypt(const void *contact, const uint8_t *content_key, size_t key_len);
RevaultBuffer key_contact_decrypt(const void *contact, const void *wrapped);
RevaultBuffer key_contact_wrapped_public(const void *wrapped);
RevaultBuffer key_contact_wrapped_ciphertext(const void *wrapped);
RevaultBuffer key_contact_wrapped_encrypted(const void *wrapped);
void key_contact_wrapped_free(void *handle);
void *key_signing_generate(void);
void *key_signing_from_private(const uint8_t *bytes, size_t len);
RevaultBuffer key_signing_public(const void *handle);
RevaultBuffer key_signing_private(const void *handle);
void *key_signing_public_from_bytes(const uint8_t *bytes, size_t len);
void key_signing_public_free(void *handle);
void key_signing_free(void *handle);
RevaultBuffer vault_key_export_private(const void *key, const char *format, size_t format_len);
RevaultBuffer vault_key_export_public(const void *key, const char *format, size_t format_len);
void *vault_key_import_private(const uint8_t *bytes, size_t len);
void *vault_key_import_public(const uint8_t *bytes, size_t len);
RevaultBuffer vault_key_fingerprint(const void *key);
RevaultBuffer vault_key_format_hex(const uint8_t *bytes, size_t len);
RevaultBuffer vault_key_decode_hex(const char *text, size_t len);
RevaultBuffer vault_key_format_crockford(const uint8_t *bytes, size_t len);
RevaultBuffer vault_key_format_crockford_reading(const char *code, size_t len);
RevaultBuffer vault_key_decode_crockford(const char *code, size_t len);
RevaultBuffer vault_key_hex_encode(const uint8_t *bytes, size_t len);
RevaultBuffer vault_key_hex_decode(const char *text, size_t len);
void *vault_directory_open(const char *root, size_t root_len, const uint8_t *password, size_t password_len);
uint32_t vault_structure_version_current(void);
uint32_t vault_directory_probe_structure_version(const char *root, size_t root_len, const uint8_t *password, size_t password_len);
void *vault_directory_open_or_create_default(const uint8_t *password, size_t password_len);
void *vault_directory_replace_default(const uint8_t *password, size_t password_len);