bindings/csharp/RevaultNative.cs

    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool lockbox_is_dir(IntPtr handle, IntPtr path, nuint path_len);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    public static extern uint lockbox_permissions(IntPtr handle, IntPtr path, nuint path_len);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool lockbox_set_permissions(IntPtr handle, IntPtr path, nuint path_len, uint permissions);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    public static extern RevaultBuffer lockbox_read_range(IntPtr handle, IntPtr path, nuint path_len, ulong offset, ulong len);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    public static extern RevaultBuffer lockbox_recovery_scan(IntPtr bytes, nuint len, IntPtr key, nuint key_len);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr lockbox_recovery_salvage(IntPtr bytes, nuint len, IntPtr key, nuint key_len, IntPtr signing_key);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    public static extern ulong lockbox_add_password(IntPtr handle, IntPtr password, nuint len);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    public static extern ulong lockbox_add_contact(IntPtr handle, IntPtr contact, IntPtr name, nuint name_len);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool lockbox_delete_key(IntPtr handle, ulong id);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    public static extern RevaultBuffer lockbox_list_key_slots(IntPtr handle);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool lockbox_set_owner_signing_key(IntPtr handle, IntPtr key);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    public static extern RevaultBuffer lockbox_owner_inspection(IntPtr handle);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    public static extern RevaultBuffer lockbox_define_form(IntPtr handle, IntPtr alias, nuint alias_len, IntPtr name, nuint name_len, IntPtr description, nuint description_len, IntPtr fields_proto, nuint fields_len);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    public static extern RevaultBuffer lockbox_list_form_definitions(IntPtr handle);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    public static extern RevaultBuffer lockbox_resolve_form(IntPtr handle, IntPtr reference, nuint reference_len);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    public static extern RevaultBuffer lockbox_list_form_revisions(IntPtr handle, IntPtr type_id, nuint type_id_len);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    public static extern RevaultBuffer lockbox_create_form_record(IntPtr handle, IntPtr path, nuint path_len, IntPtr type_reference, nuint type_len, IntPtr name, nuint name_len);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool lockbox_set_form_field(IntPtr handle, IntPtr path, nuint path_len, IntPtr field, nuint field_len, IntPtr value, nuint value_len);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool lockbox_set_secret_form_field(IntPtr handle, IntPtr path, nuint path_len, IntPtr field, nuint field_len, IntPtr value, nuint value_len);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    public static extern RevaultBuffer lockbox_list_form_records(IntPtr handle);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    public static extern RevaultBuffer lockbox_get_form_record(IntPtr handle, IntPtr path, nuint path_len);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool lockbox_delete_form_record(IntPtr handle, IntPtr path, nuint path_len);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool lockbox_move_form_records(IntPtr handle, IntPtr moves_proto, nuint moves_len);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    public static extern RevaultBuffer lockbox_get_form_field(IntPtr handle, IntPtr path, nuint path_len, IntPtr field, nuint field_len);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool lockbox_get_secret_form_field(IntPtr handle, IntPtr path, nuint path_len, IntPtr field, nuint field_len, out IntPtr output);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    public static extern RevaultBuffer lockbox_to_bytes(IntPtr handle);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    public static extern void lockbox_free(IntPtr handle);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool vault_is_running();
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool vault_forget_all();
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr key_contact_generate();
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr key_contact_from_private(IntPtr bytes, nuint len);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    public static extern RevaultBuffer key_contact_public(IntPtr handle);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    public static extern RevaultBuffer key_contact_private(IntPtr handle);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr key_contact_public_from_bytes(IntPtr bytes, nuint len);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    public static extern void key_contact_public_free(IntPtr handle);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    public static extern void key_contact_free(IntPtr handle);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr key_contact_encrypt(IntPtr contact, IntPtr content_key, nuint key_len);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    public static extern RevaultBuffer key_contact_decrypt(IntPtr contact, IntPtr wrapped);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    public static extern RevaultBuffer key_contact_wrapped_public(IntPtr wrapped);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    public static extern RevaultBuffer key_contact_wrapped_ciphertext(IntPtr wrapped);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    public static extern RevaultBuffer key_contact_wrapped_encrypted(IntPtr wrapped);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    public static extern void key_contact_wrapped_free(IntPtr handle);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr key_signing_generate();
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr key_signing_from_private(IntPtr bytes, nuint len);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    public static extern RevaultBuffer key_signing_public(IntPtr handle);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    public static extern RevaultBuffer key_signing_private(IntPtr handle);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr key_signing_public_from_bytes(IntPtr bytes, nuint len);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    public static extern void key_signing_public_free(IntPtr handle);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    public static extern void key_signing_free(IntPtr handle);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    public static extern RevaultBuffer vault_key_export_private(IntPtr key, IntPtr format, nuint format_len);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    public static extern RevaultBuffer vault_key_export_public(IntPtr key, IntPtr format, nuint format_len);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr vault_key_import_private(IntPtr bytes, nuint len);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr vault_key_import_public(IntPtr bytes, nuint len);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    public static extern RevaultBuffer vault_key_fingerprint(IntPtr key);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    public static extern RevaultBuffer vault_key_format_hex(IntPtr bytes, nuint len);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    public static extern RevaultBuffer vault_key_decode_hex(IntPtr text, nuint len);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    public static extern RevaultBuffer vault_key_format_crockford(IntPtr bytes, nuint len);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    public static extern RevaultBuffer vault_key_format_crockford_reading(IntPtr code, nuint len);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    public static extern RevaultBuffer vault_key_decode_crockford(IntPtr code, nuint len);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    public static extern RevaultBuffer vault_key_hex_encode(IntPtr bytes, nuint len);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    public static extern RevaultBuffer vault_key_hex_decode(IntPtr text, nuint len);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr vault_directory_open(IntPtr root, nuint root_len, IntPtr password, nuint password_len);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    public static extern uint vault_structure_version_current();
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    public static extern uint vault_directory_probe_structure_version(IntPtr root, nuint root_len, IntPtr password, nuint password_len);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr vault_directory_open_or_create_default(IntPtr password, nuint password_len);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr vault_directory_replace_default(IntPtr password, nuint password_len);
